# python-stuff

./: .gitignore  CMakeLists.txt  main.py  mypy.ini  pyproject.toml  readme.md  setup.py  simple.c
benchmark/cpp/: CMakeLists.txt  benchmark_one2onequeue.cpp
cmake/: cpm.cmake
src/c/: CMakeLists.txt  CmakeLists.txt  coalescingringbuffer.c  custom.c  message_queue.c  one2onequeue.c
src/c/includes/: coalescingringbuffer.h  one2onequeue.h
src/python/: main.py
tests/: message_queu_test.py
tests/c/: CMakeLists.txt  test.cpp  test_coalescingringbuffer.cpp  test_one2onequeue.cpp
tests/python/: message_queu_test.py
